--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,21 @@ footer {
 
 
 @media (max-width: 768px) {
+    body {
+        display: grid;
+        grid-template-columns: 33% 34% 33%;
+        grid-template-rows: auto 90vh /*auto*/ auto  10vh;
+        grid-template-areas: 
+            "header header header"
+            "sect1 sect1 sect1"
+            "main main main"
+            "footer footer footer"
+
+    }
+
+    aside {
+        display: none;
+    }
 
     .container .slider .slide .caption {
         position: absolute;
@@ -287,110 +302,3 @@ footer {
     }
 }
 
-
-/*Preloader*/
-/*#preloader {
-  background-color: #fff;
-  bottom: auto;
-  height: 100%;
-  left: auto;
-  position: fixed;
-  right: auto;
-  top: auto;
-  width: 100%;
-  z-index: 9999; }
-
-.book {
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  position: relative;
-  margin: 0 auto;
-  border: 5px solid #ecf0f1;
-  width: 100px;
-  height: 60px; }
-
-.book__page {
-  position: absolute;
-  left: 50%;
-  top: -5px;
-  margin: 0 auto;
-  border-top: 5px solid #ecf0f1;
-  border-bottom: 5px solid #ecf0f1;
-  border-right: 5px solid #ecf0f1;
-  background: #1bafb4;
-  width: 50px;
-  height: 60px;
-  -webkit-transform-origin: 0% 50%;
-  -ms-transform-origin: 0% 50%;
-  transform-origin: 0% 50%;
-  -webkit-animation: flip 1.2s infinite linear;
-  animation: flip 1.2s infinite linear;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards; }
-
-.book__page:nth-child(1) {
-  z-index: -1;
-  -webkit-animation-delay: 1.4s;
-  animation-delay: 1.4s; }
-
-.book__page:nth-child(2) {
-  z-index: -2;
-  -webkit-animation-delay: 2.8s;
-  animation-delay: 2.8s; }
-
-.book__page:nth-child(3) {
-  z-index: -3;
-  -webkit-animation-delay: 4.2s;
-  animation-delay: 4.2s; }
-
-@-webkit-keyframes flip {
-  0% {
-    -webkit-transform: perspective(600px) rotateY(0deg);
-    transform: perspective(600px) rotateY(0deg); }
-  20% {
-    background: #1bafb4; }
-  29.9% {
-    background: #1bafb4; }
-  30% {
-    -webkit-transform: perspective(200px) rotateY(-90deg);
-    transform: perspective(200px) rotateY(-90deg);
-    background: #1bafb4; }
-  54.999% {
-    opacity: 1; }
-  55% {
-    opacity: 0; }
-  60% {
-    -webkit-transform: perspective(200px) rotateY(-180deg);
-    transform: perspective(200px) rotateY(-180deg);
-    background: #1bafb4; }
-  100% {
-    -webkit-transform: perspective(200px) rotateY(-180deg);
-    transform: perspective(200px) rotateY(-180deg);
-    background: #1bafb4; } }
-
-@keyframes flip {
-  0% {
-    -webkit-transform: perspective(600px) rotateY(0deg);
-    transform: perspective(600px) rotateY(0deg); }
-  20% {
-    background: #1bafb4; }
-  29.9% {
-    background: #1bafb4; }
-  30% {
-    -webkit-transform: perspective(200px) rotateY(-90deg);
-    transform: perspective(200px) rotateY(-90deg);
-    background: #1bafb4; }
-  54.999% {
-    opacity: 1; }
-  55% {
-    opacity: 0; }
-  60% {
-    -webkit-transform: perspective(200px) rotateY(-180deg);
-    transform: perspective(200px) rotateY(-180deg);
-    background: #1bafb4; }
-  100% {
-    -webkit-transform: perspective(200px) rotateY(-180deg);
-    transform: perspective(200px) rotateY(-180deg);
-    background: #1bafb4; } }*/
